...
    : undefined;
  const isPosDefaultCustomer = !customerEmail || customerEmail === DRAFT_ORDER_DEFAULT_CUSTOMER_EMAIL;

  if (isPosDefaultCustomer) {
    return (
      <View className="mb-4 gap-4">
        <Text className="text-xl">Customer</Text>
        <View>
          <Text className="text-sm text-gray-300">
            No customer information available. This order was created on POS without a customer.
          </Text>
        </View>
      </View>
    );
  }

...
}> = ({ order, currency }) => {
  const automaticTaxesOn = !!order.region?.automatic_taxes;
  const shippingTotal = automaticTaxesOn ? order.shipping_total : order.shipping_subtotal;

  return (
    <>
      <Text className="mb-4 text-xl">Order Details</Text>
      <View className="mb-6 gap-2">
        <View className="flex-row items-center justify-between gap-4">
          <View className="flex-1">
            <Text className="text-sm text-gray-300">Order Status</Text>
          </View>
          <OrderStatus order={order} />
...
            <Text className="text-sm text-gray-300">Fulfillment Status</Text>
          </View>
          <FulfillmentStatus order={order} />
        </View>
      </View>
      <CustomerInformation order={order} />
      <Text className="mb-4 text-xl">Summary</Text>
      <View className="gap-2">
        <View className="flex-row items-center justify-between gap-4">
          <View className="flex-1">
            <Text className="text-sm text-gray-300">{automaticTaxesOn ? 'Subtotal (incl. taxes)' : 'Subtotal'}</Text>
          </View>
          <View className="flex-1">
...
