...
      <Button
        onPress={() => router.push('/customer-lookup')}
        variant="outline"
        icon={<UserRoundPlus size={20} />}
        className="mb-6 justify-between"
      >
        Add Customer
      </Button>
    );
  }

  const customerName = [customer.first_name, customer.last_name].filter(Boolean).join(' ');

...
    return <CartSkeleton />;
  }

  if (draftOrder.isError || settings.isError) {
    return (
      <Layout className="pb-6">
        <Text className="text-4xl">Cart</Text>
        <View className="flex-1 items-center  justify-center gap-2">
          <InfoBanner variant="ghost" colorScheme="error" className="w-40">
            Failed to load cart
          </InfoBanner>
          <Button
            onPress={() => {
...
